<resources>
    <string name="app_name">玩Android</string>

    <string name="main_title_home">主页</string>
    <string name="main_title_knowledge">知识体系</string>
    <string name="main_title_official_accounts">公众号</string>
    <string name="main_title_navigation">导航</string>
    <string name="main_title_project">项目</string>

    <string name="label_open_drawer_layout">打开侧边菜单</string>
    <string name="label_close_drawer_layout">关闭侧边菜单</string>
</resources>
