<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_main_nav_menu_home"
        android:title="@string/main_title_home" />
    <item
        android:id="@+id/knowledgeFragment"
        android:icon="@drawable/ic_main_nav_menu_knowledge"
        android:title="@string/main_title_knowledge" />
    <item
        android:id="@+id/officialAccountsFragment"
        android:icon="@drawable/ic_main_nav_menu_official_accounts"
        android:title="@string/main_title_official_accounts" />
    <item
        android:id="@+id/navigationFragment"
        android:icon="@drawable/ic_main_nav_menu_navigation"
        android:title="@string/main_title_navigation" />

    <item
        android:id="@+id/projectFragment"
        android:icon="@drawable/ic_main_nav_menu_project"
        android:title="@string/main_title_project" />
</menu>